fix gap at the first page

--- a/homeworks/ekaterina.sharova_rogerosha/PokemonProject/style.css
+++ b/homeworks/ekaterina.sharova_rogerosha/PokemonProject/style.css
@@ -121,7 +121,7 @@
   font-size: 48px;
   line-height: 32px;
   margin-top: 0;
-  margin-left: 68px;
+  margin-left: 25px;
   width: 575px;
   height: 46px;
 }
@@ -133,7 +133,7 @@ p {
   font-weight: 400;
   font-size: 22px;
   line-height: 32px;
-  margin-left: 68px;
+  margin-left: 25px;
   margin-top: auto;
   width: 575px;
   height: 409px;
